<resources>
    <string name="app_name">Mi Alcancía Virtual</string>
    <string name="menu">Menú</string>
    <string name="my_profile">Mi perfil</string>
    <string name="my_goals">Otras Metas</string>
    <string name="about">Acerca de</string>
    <string name="add_photo">Agregar foto</string>
    <string name="goal_name">Nombre de tu meta</string>
    <string name="goal_start_date">Fecha de inicio de tu meta</string>
    <string name="goal_value">Valor de tu meta</string>
    <string name="add_your_goal">Agrega tu meta</string>
    <string name="save_goal">Guardar meta</string>
    <string name="necesary_permission">Permiso necesario</string>
    <string name="permission_request_message">Este permiso es importante para el funcionamiento de la aplicacion y la ejecucion de la accion que querias realizar, te garantizamos que en ningun momento usaremos tu informacion para algo fuera de la aplicacion y que tu mismo puedes ver.</string>
    <string name="acept">Aceptar</string>
    <string name="please_complete_empty_input">Por favor completa este campo</string>
    <string name="please_choose_photo_goal">Por favor selecciona una foto para tu meta</string>
    <string name="start_menu">Inicio</string>
    <string name="add_contribution">Nuevo aporte</string>
    <string name="no_goals_message">Empieza a crear metas para visualizarlas aqui</string>
    <string name="likes">%d Me gusta</string>
    <string name="goals">%d Metas</string>
    <string name="contributions">%d Aportes</string>
    <string name="money_progress">$%1$d / $%2$d</string>
    <string name="ad_id_native">testu7m3hc4gvm</string>
    <string name="ad_id_native_small">testb65czjivt9</string>
    <string name="ad_id_native_video">testy63txaom86</string>
    <string name="reports">Reportes</string>
    <string name="another_goals">Metas globales</string>
    <string name="auto_login_key">auto_login</string>
    <string name="starting_login">Iniciando Sesión</string>
    <string name="scan_product">Escanear producto</string>
    <string name="add_new_goal">Crear nueva meta</string>
    <string name="scann_product">Escanear producto</string>
    <string name="wrong_qr_code">Este codigo QR no es valido, busca codigos QR identificados con el icono de Huawei</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="huawei_goals">Mis metas Huawei</string>
    <string name="daily_advice">Consejo diario</string>
    <string name="consejo_1">Haz un presupuesto mensual, así sabrás cuánto ganas, cuánto gastas y cuál es tu posibilidad de ahorro.</string>
    <string name="consejo_2">Aprende a distinguir entre necesidades y deseos, así evitaras compras innecesarias.</string>
    <string name="consejo_3">Evita el “gasto hormiga”, ya que con ello podrás tener mayor margen de maniobra.</string>
    <string name="consejo_4">Establece metas para el ahorro, las cuales puedes dividir en corto, mediano y largo plazo.</string>

</resources>