<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_add_goal"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/hiad_50_percent_black"
                android:paddingStart="6dp"
                android:paddingEnd="16dp"
                app:contentInsetStartWithNavigation="0dp"
                app:navigationIcon="@drawable/close_button"
                app:titleTextColor="@android:color/white">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_save_goal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/save_goal"
                    android:textColor="@color/dark_background"
                    app:backgroundTint="@color/colorAccent"
                    app:icon="@drawable/save_icon"
                    app:iconTint="@color/dark_background" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_goal_name"
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:textColorHint="@android:color/white"
                    app:helperTextEnabled="true"
                    app:hintTextColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/goal_name"
                        android:singleLine="true"
                        android:textColor="@android:color/white" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_goal_value"
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColorHint="@android:color/white"
                    app:helperTextEnabled="true"
                    app:hintTextColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="@+id/til_goal_name"
                    app:layout_constraintStart_toStartOf="@+id/til_goal_name"
                    app:layout_constraintTop_toBottomOf="@+id/til_goal_name"
                    app:startIconDrawable="@drawable/money_icon"
                    app:startIconTint="@android:color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/goal_value"
                        android:inputType="numberDecimal"
                        android:maxLength="15"
                        android:singleLine="true"
                        android:textColor="@android:color/white" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_goal_date"
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColorHint="@android:color/white"
                    app:helperTextEnabled="true"
                    app:hintTextColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="@+id/til_goal_value"
                    app:layout_constraintStart_toStartOf="@+id/til_goal_value"
                    app:layout_constraintTop_toBottomOf="@+id/til_goal_value"
                    app:startIconDrawable="@drawable/calendar_icon"
                    app:startIconTint="@android:color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_goal_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="false"
                        android:hint="@string/goal_start_date"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        tools:ignore="Deprecated,KeyboardInaccessibleWidget" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_take_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawableTint="@android:color/white"
                    android:text="@string/add_photo"
                    android:textColor="@color/dark_background"
                    app:backgroundTint="@color/colorAccent"
                    app:icon="@drawable/image_icon"
                    app:iconTint="@color/dark_background"
                    app:layout_constraintEnd_toEndOf="@+id/til_goal_date"
                    app:layout_constraintStart_toStartOf="@+id/til_goal_date"
                    app:layout_constraintTop_toBottomOf="@+id/til_goal_date" />

                <ImageView
                    android:id="@+id/iv_goal_photo"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:scaleType="centerCrop"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_take_photo" />

                <ImageButton
                    android:id="@+id/ib_delete_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:tint="@color/design_default_color_error"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_goal_photo"
                    app:layout_constraintStart_toStartOf="@+id/iv_goal_photo"
                    app:srcCompat="@drawable/delete_icon" />

                <ImageButton
                    android:id="@+id/ib_fullscreen_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:tint="@color/colorPrimary"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_goal_photo"
                    app:layout_constraintEnd_toEndOf="@+id/iv_goal_photo"
                    app:srcCompat="@drawable/fullscreen_icon" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_upload_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/material_on_background_emphasis_medium"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="64dp" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>